<resources>
    <string name="app_name">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Afar to English Dictionary</string>
    <string name="nav_header_subtitle">fitsumcomop1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>